Changed the configuration to point at the bookyrself-staging project, which holds some very stupid data. Updated index.html to use the new types I've specified in my firebase project note that i added my admin-sdk-key to gitignore, so this project wont run if you pull this down without that. Changed read and write rules to be true since they were defaulted to false on the demo project

--- a/example/index.html
+++ b/example/index.html
@@ -1,4 +1,4 @@
-
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,8 +40,10 @@
                    </span>
                </div>
                <ul class="list-inline">
-                   <li><label><input type="radio" name="type" value="user"> users</label></li>
-                   <li><label><input type="radio" name="type" value="message" checked> messages</label></li>
+                   <li><label><input type="radio" name="type" value="convos"> convos</label></li>
+                   <li><label><input type="radio" name="type" value="events" checked> events</label></li>
+                   <li><label><input type="radio" name="type" value="users"> users</label></li>
+
                    <li class="divider"></li>
                    <li><label><input type="checkbox" name="exact"> match whole phrase</label></li>
                </ul>
