uploaded new data, no longer have to use 0 as the root of the path added user_tags and event_tags types, which only index the name of the event or user and the associated tags added user_tags and event_tags to index.html updated seed data to be the data from firebase, so i can query locally

--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,8 @@
                    </span>
                </div>
                <ul class="list-inline">
-                   <li><label><input type="radio" name="type" value="convos"> convos</label></li>
+                   <li><label><input type="radio" name="type" value="user_tags"> user_tags</label></li>
+                   <li><label><input type="radio" name="type" value="event_tags"> event_tags</label></li>
                    <li><label><input type="radio" name="type" value="events" checked> events</label></li>
                    <li><label><input type="radio" name="type" value="users"> users</label></li>
 
