--- a/example/index.html
+++ b/example/index.html
@@ -40,8 +40,8 @@
                    </span>
                </div>
                <ul class="list-inline">
-                   <li><label><input type="radio" name="type" value="user"> users</label></li>
-                   <li><label><input type="radio" name="type" value="message" checked> messages</label></li>
+                   <li><label><input type="radio" name="type" value="users"> users</label></li>
+                   <li><label><input type="radio" name="type" value="events" checked> events</label></li>
                    <li class="divider"></li>
                    <li><label><input type="checkbox" name="exact"> match whole phrase</label></li>
                </ul>
