--- a/example/index.html
+++ b/example/index.html
@@ -81,6 +81,9 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
+<!-- authentication -->
+
+
 <!-- the app -->
 <script type="text/javascript" src="example.js"></script>
 
