updating the header to reflect 'Artie' and removing useless Firebase index option in query

--- a/example/index.html
+++ b/example/index.html
@@ -27,12 +27,12 @@
 <body ng-app="app" class="ng-cloak" >
 
 <div class="container">
-    <h1>Flashlight: Search library built on Firebase and ElasticSearch</h1>
+    <h1>Artie: Search for artists and events. View their availability!</h1>
     <div class="row">
         <div class="col-md-6">
            <form role="form" class="form-inline">
                <!-- turn this into a select to search multiple indexes -->
-               <input type="hidden" name="index" value="firebase" />
+               <input type="hidden" name="index" value="users" />
                <div class="input-group">
                    <input type="text" class="form-control" name="term" value="you" placeholder="Enter search term">
                    <span class="input-group-btn">
