--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Flashlight: A search library using Firebase and ElasticSearch"/>
+    <meta name="description" content="Artie: Search for artists and events."/>
     <meta name="author" content="Michael Wulf"/>
 
     <!-- Bootstrap core CSS -->
@@ -22,17 +22,15 @@
     <!-- stuff to make the page pretty -->
     <link rel="stylesheet" href="style.css"/>
 
-    <title>Flashlight: A search library using Firebase and ElasticSearch</title>
+    <title>Artie: Search artist and venue availabilities!</title>
 </head>
 <body ng-app="app" class="ng-cloak" >
 
 <div class="container">
-    <h1>Artie: Search for artists and events. View their availability!</h1>
+    <h1>Artie: Search artist and venue availabilities!</h1>
     <div class="row">
         <div class="col-md-6">
            <form role="form" class="form-inline">
-               <!-- turn this into a select to search multiple indexes -->
-               <input type="hidden" name="index" value="users" />
                <div class="input-group">
                    <input type="text" class="form-control" name="term" value="you" placeholder="Enter search term">
                    <span class="input-group-btn">
@@ -40,8 +38,8 @@
                    </span>
                </div>
                <ul class="list-inline">
-                   <li><label><input type="radio" name="type" value="users"> users</label></li>
-                   <li><label><input type="radio" name="type" value="events" checked> events</label></li>
+                   <li><label><input type="radio" name="index" value="users"> users</label></li>
+                   <li><label><input type="radio" name="index" value="events" checked> events</label></li>
                    <li class="divider"></li>
                    <li><label><input type="checkbox" name="exact"> match whole phrase</label></li>
                </ul>
@@ -70,8 +68,6 @@
         <p><a href="http://firebase.mit-license.org/">MIT License</a> | <a href="http://www.firebase.com">Firebase</a></p>
     </div>
 </div>
-
-<a id="fork_on_github" href="https://github.com/firebase/flashlight" target="_blank"><img src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
 <!-- libs and dependencies -->
 <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
